[FIX] css formCreate en version mobile y cartel de error en el form login al iniciar sesion desde el menuburger

--- a/frontend/src/components/Forms/styles.module.css
+++ b/frontend/src/components/Forms/styles.module.css
@@ -267,11 +267,16 @@ form ul {
   
   input,
   .boton button,
-  input[type="text"],
   .error{
     width: 100%;
   }
 
+  input[type=text]{
+    max-width: 320px;
+  }
+  .containerFullname{
+    width: 100%;
+  }
   .confirm{
     bottom:31.7%
   }
